Bug 115212 - FILESAVE DOCX Change tracking deleted TOC entries cause invalid text node error in Word
Summary: FILESAVE DOCX Change tracking deleted TOC entries cause invalid text node err...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: filter:docx
Depends on:
Blocks: DOCX-Corrupted DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2018-01-24 21:33 UTC by Gabor Kelemen (Collabora)
Modified: 2021-05-31 03:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2013 (14.05 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-01-24 21:33 UTC, Gabor Kelemen (Collabora)
Details
Edited document in Writer 5.4.2 (11.14 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-01-24 21:33 UTC, Gabor Kelemen (Collabora)
Details
Invalid text node error in Word 2013 (7.11 KB, image/png)
2018-01-24 21:34 UTC, Gabor Kelemen (Collabora)
Details
The changed file side by side in Word and Writer (126.55 KB, image/png)
2018-01-24 21:34 UTC, Gabor Kelemen (Collabora)
Details
The example file saved by LO 6.1 master (11.21 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-02-05 13:24 UTC, Gabor Kelemen (Collabora)
Details
Still happens in LO 6.3 (109.64 KB, image/png)
2019-01-14 16:03 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2018-01-24 21:33:15 UTC
Created attachment 139341 [details]
Example file from Word 2013

Attached is a simple file from Word 2013 with some titles and a TOC.

In Writer I turned on Change Tracking, then deleted the TOC entries.

While this makes no sense from document edition POV, it is possible to do and after saving the file and reopening in Word 2013, it causes an "invalid text node" error.
Comment 1 Gabor Kelemen (Collabora) 2018-01-24 21:33:46 UTC
Created attachment 139342 [details]
Edited document in Writer 5.4.2
Comment 2 Gabor Kelemen (Collabora) 2018-01-24 21:34:11 UTC
Created attachment 139343 [details]
Invalid text node error in Word 2013
Comment 3 Gabor Kelemen (Collabora) 2018-01-24 21:34:39 UTC
Created attachment 139344 [details]
The changed file side by side in Word and Writer
Comment 4 Xisco Faulí 2018-01-26 12:19:22 UTC
I can't reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: 5cb225b0b3dbb55fd44899b1fb16bdcfeb866849
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

Do you reproduce it in master ?
Comment 5 Gabor Kelemen (Collabora) 2018-02-05 13:24:46 UTC
Created attachment 139598 [details]
The example file saved by LO 6.1 master

Sure, I can still reproduce it in master.

Maybe I was not clear enough: to get this result, you need to select the rows in the TOC then push the Delete button.
Is this how you tried?
Comment 6 Aron Budea 2018-02-06 21:28:43 UTC
Reproduced using LO 6.0.0.3 & 4.4.0.3 / Windows 7.
Comment 7 Gabor Kelemen (Collabora) 2019-01-14 16:03:56 UTC
Created attachment 148309 [details]
Still happens in LO 6.3

Maybe a little bit less bad, but I'm still getting an invalid node message from Word.

Version: 6.3.0.0.alpha0+
Build ID: 17dd2662ccfa9d04efbea74e5d7548db5b2126d4
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc:
Comment 8 Commit Notification 2019-06-06 06:13:01 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/f9fd82ffa2ccb0e506f44586289ac8b3e1001b38%5E%21

tdf#115212 DOCX export: fix ToC with tracked deletion

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gabor Kelemen (Collabora) 2019-06-12 11:20:49 UTC
Verified to be fixed with:

Version: 6.4.0.0.alpha0+ (x86)
Build ID: 5e74085e07bbeb23c7d29fc3c5f6f6d2b7ff97e7
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-06-10_00:14:28
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

Now change tracking applied to the text of the TOC in the example file roundtrips correctly between LO and Word.
Comment 10 Commit Notification 2019-06-14 13:49:33 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/caaeb47ad235a1e8eabe0a0cd97f096d38db2a95%5E%21

tdf#115212 DOCX export: fix ToC with tracked deletion

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.