tdf#115212 DOCX export: fix ToC with tracked deletion

Removing part of Table of Contents with tracked deletion
resulted broken DOCX export, ie. unrecoverable and
uneditable document in MSO.

Change-Id: If5972b2c9fb967819b7be889e0a3efb3714e670b
Reviewed-on: https://gerrit.libreoffice.org/73550
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit f9fd82ffa2ccb0e506f44586289ac8b3e1001b38)